SERVER-93371 Fixed lock ordering in CommonMongodProcessInterface::fieldsHaveSupportingUniqueIndex (#27516)

GitOrigin-RevId: b638c05f2b131bb517c6fcda09c8abbb1d639ffb